fix: Fix 10th place leaderboard spot spacing.

--- a/apps/website/src/components/leaderboard/Leaderboard/Leaderboard.module.scss
+++ b/apps/website/src/components/leaderboard/Leaderboard/Leaderboard.module.scss
@@ -53,7 +53,8 @@
   font-size: 16px;
   font-weight: 900;
 
-  margin-right: 14px;
+  display: inline-block;
+  width: 40px;
 }
 
 .user, .amount {
